--- a/.github/workflows/deploy-staging-web.yml
+++ b/.github/workflows/deploy-staging-web.yml
@@ -13,9 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: amondnet/now-deployment@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
         with:
-          zeit-token: ${{ secrets.NOW_TOKEN }}
-          now-org-id: ${{ secrets.NOW_ORG_ID}}
-          now-project-id: ${{ secrets.NOW_PROJECT_ID}}
-          working-directory: ./web
+          node-version: "12.x"
+      - name: Install dependencies
+        run: yarn
+      - uses: actions/vercel-deployment@0.5.1
+        with:
+          vercelToken: ${{ secrets.VERCEL_TOKEN }}
+          vercelOrgId: ${{ secrets.VERCEL_ORG_ID }}
+          vercelProjectId: ${{ secrets.VERCEL_PROJECT_ID }}
+          githubToken: ${{ secrets.GH_TOKEN }}
+          #sourceDirectory: "web"
+          #assignDomain: "preview.example.com"
+        env:
+          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+          NEXT_PUBLIC_STAGE: ${{ secrets.NEXT_PUBLIC_STAGE }}
