--- a/.github/workflows/deploy-staging-web.yml
+++ b/.github/workflows/deploy-staging-web.yml
@@ -1,5 +1,4 @@
-name: Deploy Web
-
+name: STAGING - Build and Deploy Web
 on:
   push:
     branches:
@@ -7,17 +6,14 @@ on:
     paths-ignore:
       - api/**
       - .github/workflows/deploy-staging-api.yml
-
 jobs:
   deploy:
+    name: Build and Deploy Staging Web
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: amondnet/vercel-action@v19
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
-          #github-token: ${{ secrets.GH_TOKEN }} #Optional
-          #vercel-args: '--prod' #Optional
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID}} #Required
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}} #Required
-          working-directory: ./web
