--- a/.github/workflows/deploy-staging-web.yml
+++ b/.github/workflows/deploy-staging-web.yml
@@ -17,3 +17,4 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID}} #Required
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}} #Required
+          working-directory: ./web
