--- a/.github/workflows/deploy-staging-api.yml
+++ b/.github/workflows/deploy-staging-api.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           version: "latest"
           service_account_key: ${{ secrets.RUN_SA_KEY }}
-          export_default_credentials: true
+          #  export_default_credentials: true
           project_id: $PROJECT_ID
       # Build and push image to Google Container Registry
       - name: Build
