--- a/.github/workflows/deploy-staging-api.yml
+++ b/.github/workflows/deploy-staging-api.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           version: "latest"
           service_account_key: ${{ secrets.RUN_SA_KEY }}
+          project_id: $PROJECT_ID
           export_default_credentials: true
-          project_id: wedding-gift-planner
       # Build and push image to Google Container Registry
       - name: Build
         run: |-
