--- a/.github/workflows/deploy-staging-api.yml
+++ b/.github/workflows/deploy-staging-api.yml
@@ -20,7 +20,7 @@ jobs:
       # Setup gcloud CLI
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          version: "latest"
+          version: "290.0.1"
           service_account_key: ${{ secrets.RUN_SA_KEY }}
           project_id: $PROJECT_ID
           export_default_credentials: true
