--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
     "generate": "yarn generate:prisma && yarn generate:nexus",
     "prisma:migrate:save": "dotenv -- prisma migrate save --experimental",
     "prisma:migrate:up": "dotenv -- prisma migrate up --experimental --auto-approve",
-    "prisma:seed:dev": "dotenv -- ts-node prisma/seeds/index.ts"
+    "prisma:seed:dev": "dotenv -- ts-node prisma/seeds/index.ts",
+    "config:staging": "STAGE=staging ts-node scripts/secrets.ts"
   },
   "dependencies": {
     "@nexus/schema": "^0.15.0",
@@ -26,7 +27,8 @@
     "nexus-plugin-prisma": "^0.17.0"
   },
   "devDependencies": {
-    "@types/node": "^14.6.0",
+    "@google-cloud/secret-manager": "^3.1.0",
+    "@types/node": "^14.6.2",
     "apollo-server-testing": "^2.16.1",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
