--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-wedding-planner",
+  "name": "api-wedding-gift-planner",
   "version": "1.0.0",
   "private": true,
   "scripts": {
