--- a/api/package.json
+++ b/api/package.json
@@ -18,18 +18,19 @@
     "@nexus/schema": "^0.15.0",
     "apollo-server-express": "^2.16.1",
     "cookie-parser": "^1.4.5",
+    "cuid": "^2.1.8",
     "dotenv-cli": "^3.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.1.1",
     "graphql": "^15.3.0",
-    "graphql-scalars": "^1.2.6",
-    "helmet": "^4.1.0",
-    "nexus-plugin-prisma": "^0.17.0"
+    "graphql-iso-date": "^3.6.1",
+    "helmet": "^4.1.1",
+    "nexus-plugin-prisma": "^0.18.2"
   },
   "devDependencies": {
     "@google-cloud/secret-manager": "^3.1.0",
-    "@types/node": "^14.6.2",
-    "apollo-server-testing": "^2.16.1",
+    "@types/node": "^14.10.1",
+    "apollo-server-testing": "^2.17.0",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
