--- a/web/package.json
+++ b/web/package.json
@@ -15,8 +15,10 @@
     "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "react": "16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.13.1",
-    "react-hook-form": "^6.8.1"
+    "react-hook-form": "^6.8.1",
+    "react-table": "^7.5.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.17.8",
@@ -26,6 +28,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
+    "@types/react-table": "^7.0.23",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "stylelint": "^13.7.1",
