--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@apollo/client": "^3.1.5",
     "firebase": "^7.20.0",
+    "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-datepicker": "^3.1.3",
     "react-dom": "16.13.1",
-    "react-hook-form": "^6.8.1",
     "react-table": "^7.5.0"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-table": "^7.0.23",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
