--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@nexus/schema": "^0.15.0",
+    "@sendgrid/mail": "^7.2.6",
     "apollo-server-express": "^2.16.1",
     "cookie-parser": "^1.4.5",
     "cuid": "^2.1.8",
