--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,8 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^3.2.2",
     "react-dom": "16.13.1",
-    "react-table": "^7.5.1"
+    "react-table": "^7.5.1",
+    "react-toastify": "^6.0.8"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.17.9",
