--- a/api/package.json
+++ b/api/package.json
@@ -15,25 +15,27 @@
     "config:staging": "STAGE=staging ts-node scripts/secrets.ts"
   },
   "dependencies": {
-    "@nexus/schema": "^0.15.0",
-    "@sendgrid/mail": "^7.2.6",
-    "apollo-server-express": "^2.18.1",
+    "@nexus/schema": "^0.17.0",
+    "@prisma/client": "^2.10.1",
+    "@sendgrid/mail": "^7.3.0",
+    "apollo-server-express": "^2.18.2",
     "cookie-parser": "^1.4.5",
     "cuid": "^2.1.8",
     "dotenv-cli": "^4.0.0",
     "express": "^4.17.1",
-    "firebase-admin": "^9.2.0",
-    "graphql": "^15.3.0",
+    "firebase-admin": "^9.3.0",
+    "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
     "helmet": "^4.1.1",
-    "nexus-plugin-prisma": "^0.19.0"
+    "nexus-plugin-prisma": "^0.23.1"
   },
   "devDependencies": {
     "@google-cloud/secret-manager": "^3.2.0",
-    "@types/node": "^14.11.2",
-    "apollo-server-testing": "^2.18.1",
-    "nodemon": "^2.0.4",
+    "@prisma/cli": "^2.10.1",
+    "@types/node": "^14.14.6",
+    "apollo-server-testing": "^2.18.2",
+    "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   }
 }
