--- a/web/package.json
+++ b/web/package.json
@@ -9,34 +9,36 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.1",
-    "firebase": "^7.21.1",
-    "formik": "^2.1.5",
-    "graphql": "^15.3.0",
+    "@apollo/client": "^3.2.5",
+    "firebase": "^8.0.0",
+    "formik": "^2.2.1",
+    "graphql": "^15.4.0",
     "js-cookie": "^2.2.1",
-    "next": "9.5.3",
-    "react": "16.13.1",
+    "next": "10.0.0",
+    "react": "17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-datepicker": "^3.2.2",
-    "react-dom": "16.13.1",
-    "react-table": "^7.5.1",
-    "react-toastify": "^6.0.8"
+    "react-datepicker": "^3.3.0",
+    "react-dom": "17.0.1",
+    "react-table": "^7.6.1",
+    "react-toastify": "^6.0.9",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.17.9",
-    "@graphql-codegen/typescript": "^1.17.10",
+    "@graphql-codegen/cli": "^1.19.0",
+    "@graphql-codegen/typescript": "^1.17.11",
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@graphql-codegen/typescript-react-apollo": "^2.0.7",
     "@types/js-cookie": "^2.2.6",
-    "@types/node": "^14.11.2",
-    "@types/react": "^16.9.49",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
     "@types/react-datepicker": "^3.1.1",
-    "@types/react-table": "^7.0.23",
+    "@types/react-table": "^7.0.25",
+    "@types/yup": "^0.29.9",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
-    "tailwindcss": "^1.8.10",
-    "typescript": "^4.0.3"
+    "tailwindcss": "^1.9.6",
+    "typescript": "^4.0.5"
   }
 }
