--- a/.github/workflows/deploy-staging-web.yml
+++ b/.github/workflows/deploy-staging-web.yml
@@ -8,10 +8,6 @@ on:
       - api/**
       - .github/workflows/deploy-staging-api.yml
 
-defaults:
-  run:
-    working-directory: web
-
 jobs:
   deploy:
     name: Build and Deploy Staging Web
@@ -24,4 +20,4 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} #Required
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }} #Required
           # vercel-args: "--prod"
-          # working-directory: ./web
+          working-directory: ./web
