--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "lint:all": "eslint ./ --max-warnings 0"
   },
   "dependencies": {
     "@apollo/client": "^3.3.8",
@@ -41,6 +42,7 @@
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "prettier": "^2.0.5",
     "typescript": "^4.1.3"
   }
