--- a/.github/workflows/deploy-staging-web.yml
+++ b/.github/workflows/deploy-staging-web.yml
@@ -19,5 +19,5 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} #Required
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }} #Required
-          # vercel-args: "--prod"
+          vercel-args: "--prod"
           working-directory: ./web
