--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,7 @@
     "config:staging": "STAGE=staging ts-node scripts/secrets.ts"
   },
   "dependencies": {
-    "@prisma/client": "2.16.0",
+    "@prisma/client": "2.16.1",
     "@sendgrid/mail": "^7.4.2",
     "apollo-server-express": "^2.19.2",
     "cookie-parser": "^1.4.5",
@@ -28,19 +28,19 @@
     "graphql-iso-date": "^3.6.1",
     "helmet": "^4.4.1",
     "nexus": "^1.0.0",
-    "nexus-plugin-prisma": "^0.30.0",
-    "prisma": "^2.16.0"
+    "nexus-plugin-prisma": "^0.30.0"
   },
   "devDependencies": {
     "@google-cloud/secret-manager": "^3.4.0",
     "@types/node": "^14.14.25",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.0.5",
+    "prisma": "^2.16.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
